@@ -88,6 +88,7 @@ functionality that can be directly applied to twill.</li>
 <li>expose 'browser' &amp; document re Grig; regexp esp.; make source docs.</li>
 <li>twill-fork: make file writing stuff optional; test massive fork fn.</li>
 <li>add config directives for socket timeout.</li>
+<li>can we figure out auth domain automatically?</li>
 </ol>
 </blockquote>
 <p>Misc fixes &amp; cleanups:</p>
